# rust_api_server

./: Cargo.toml  ReadMe.md  diesel.toml  docker-compose.yml
.github/workflows/: build.yaml
src/: commands.rs  lib.rs  main.rs  models.rs  repositories.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
