[package]
name = "cr8ts"
default-run = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "4.4"
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
rocket = { version = "0.5", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = "1"
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }