[package]
name = "cr8ts"
default-run = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.4"
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
lettre = "0.11"
rand = "0.8"
rocket = { version = "0.5", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = "1"
tera = "1"
rocket_db_pools = { version = "0.1", features = ["diesel_postgres", "deadpool_redis"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }